# rad

./: LICENSE-APACHE  LICENSE-MIT  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
src/: App.svelte  main.ts  styles.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  commands.rs  downloads.rs  file.rs  main.rs  parsers.rs
src/lib/: DownloadForm.svelte  DownloadItem.svelte  Downloads.svelte  Downloads.ts
src/lib/AudioPlayer/: AudioPlayer.svelte
src/lib/Downloads/: DownloadForm.svelte  DownloadItem.svelte  Downloads.svelte  Downloads.ts
