[package]
name = "rad"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.22", features = [
    "rustls-tls",
], default-features = false }
scraper = "0.18.1"
tokio = { version = "1.35.0", features = [
    "rt-multi-thread",
    "io-util",
    "fs",
    "sync",
] }
regex = "1.10.2"
mp4ameta = "0.11.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
