[package]
name = "rad"
version = "0.1.0"
description = "Reddit Audio Download Manager"
authors = ["you"]
license = "Apache-2.0 OR MIT"
repository = ""
edition = "2021"
exclude = ["screenshots/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "path-all",
    "dialog-open",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.22", features = [
    "rustls-tls",
], default-features = false }
scraper = "0.18.1"
tokio = { version = "1.35.0", features = [
    "rt-multi-thread",
    "io-util",
    "fs",
    "sync",
] }
regex = "1.10.2"
lofty = "0.18.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "z"   # Optimize for binary size
strip = true      # Remove debug symbols
